Moved local storage cache limit to parameters; add clear cache button, added warning in home page, update style.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,7 +30,7 @@
     <![endif]-->
 </head>
 
-<body role="document">
+<body role="document" class="theme-slacker">
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
@@ -69,6 +69,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js" integrity="sha384-EZKKO3vHj6CHKQPIi5+Ubzvx7GjCAfgb/28vGjgly8qKb2DMq7V5D2o//Bjp9z03" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="{{ asset('js/scripts.js') }}"></script>
 
 {% block javascripts %}{% endblock %}
 </body>
