--- a/web/styles/styles.scss
+++ b/web/styles/styles.scss
@@ -3,20 +3,6 @@ body {
     padding-bottom: 30px;
 }
 
-.theme-dropdown .dropdown-menu {
-    position: static;
-    display: block;
-    margin-bottom: 20px;
-}
-
-.theme-showcase > p > .btn {
-    margin: 5px 0;
-}
-
-.theme-showcase .navbar .container {
-    width: auto;
-}
-
 .progress.progress-center-text {
     position: relative;
 }
@@ -26,4 +12,12 @@ body {
     display: block;
     width: 100%;
     color: black;
+}
+
+.progress-lg {
+    &, .progress-bar {
+        font-size: 16px;
+        height: 35px;
+        line-height: 35px;
+    }
 }
